0024296: Test "bugs fclasses bug309" is crashed if current directory is into disc-root

Fixed incorrect inclusion of slash symbol to the path.